--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h6 {
 }
 h1 {
     font-size: 24px;
-    color: #1b5354;
+    color: #000;
 }
 h2 {
     font-size: 22px
@@ -156,13 +156,13 @@ button:focus{
     letter-spacing: 1px;
     text-align: center;
     line-height: 40px;
-    background: #1b5354;
     color: #ffffff;
     padding: 0;
+	background: #fca901;
 }
 /*--HEADER--*/
 .main-top{
-	background: #12557f;
+	background: #bb8008;
 }
 .left-top a{
 	display: inline-block;
@@ -207,7 +207,7 @@ button:focus{
     background: rgba(255,255,255,0.2);
 }
 .new-btn-d::after {
-    background: #00cb86;
+    background: #bb8008;
 }
 .new-btn-d:hover::after {
     -webkit-transition-delay: 0.175s;
@@ -226,8 +226,8 @@ button:focus{
 	border: 2px solid #ffffff;
 }
 .mail-b a:hover{
-	color: #00cb86;
-	border: 2px solid #00cb86;
+	color: #000;
+	border: 2px solid #bb8008;
 }
 .right-top{
 	float: right;
@@ -243,8 +243,8 @@ button:focus{
 	border: 2px solid #ffffff;
 }
 .right-top ul li a:hover{
-	background: #00cb86;
-	color: #ffffff;
+	background: #bb8008;
+	color: #fff;
 }
 .wel-nots{
 	float: right;
@@ -258,10 +258,8 @@ button:focus{
 }
 .top-header .navbar {
 	padding: 5px 0px;
-	background: #1b5354
 }
 .top-header {
-	background-color:cadetblue;
 	position: relative;
 	top: 0px;
 	left: 0px;
@@ -275,12 +273,12 @@ button:focus{
 	padding: 5px 8px;
 	position: relative;
 	font-weight: 400;
-	color:#fff;
+	color:#000;
 }
 	.top-header .navbar .navbar-collapse ul li a.active {
 		color: #000;
+		background: yellow;
 		border-radius: 12px;
-		color: #ffffff;
 		-webkit-transition: all 0.5s ease-in-out 0s;
 		-moz-transition: all 0.5s ease-in-out 0s;
 		-ms-transition: all 0.5s ease-in-out 0s;
@@ -297,8 +295,8 @@ button:focus{
             left: 0;
             right: 0;
             margin: auto;
-            background-image: repeating-linear-gradient(black,#1b5354, #ffffff);
-            border: 1px solid #936428;
+            background-image: repeating-linear-gradient(black,#f5f112, #ffffff);
+            border: 1px solid #fff;
             border-radius: 10px;
             transition: ease all 0.3s;
             transform: translateY(0%) rotate(140deg);
@@ -313,7 +311,7 @@ button:focus{
             transition: all 0.5s ease-in-out 0s;
         }
 .top-header .navbar .navbar-collapse ul li a:hover{
-	background-color:black;
+	background-color:#bb8008;
 	color: #ffffff;
 	border-radius:14px;
 }
@@ -331,7 +329,7 @@ button:focus{
 	z-index: 20;
 }
 .navbar-toggler{
-	border: 1px solid #57cef8 ;
+	border: 1px solid #f5f112 ;
 	border-radius: 0;
 	margin: 16px 15px;
 	padding: 10px 10px;
@@ -359,10 +357,10 @@ button:focus{
 	margin-top: 5px;
 }
 .navbar-toggler:hover{
-	border: 1px solid #00cb86;
+	border: 1px solid #f5f112;
 }
 .navbar-toggler:hover span{
-	background: #00cb86;
+	background: #bb8008;
 }
 /*-- Banner--*/
 .home-slider{
@@ -476,18 +474,15 @@ button:focus{
 .title-box{
 	text-align: center;
 	margin-bottom: 30px;
-	background:#fff;
 }
 	.title-box h2 {
-		font-size: 35px;
-		font-family: 'Catamaran', sans-serif;
-		color: cadetblue;
-		font-weight: 500;
+		font-size: 42px;
+		color: #fca901;
 		position: relative;
 		padding-bottom: 30px;
 		margin-bottom: 15px;
 		text-shadow: 1px 2px 3px black;
-		box-shadow: 0 5px 5px 0 cadetblue;
+		box-shadow: 0 1px 3px 0 #f5f112;
 	}
 .title-box h2::after{
 	content: "";
@@ -501,7 +496,7 @@ button:focus{
 	margin: 0 auto;
 }
 .title-box h2 span{
-	color: #00cb86;
+	color: yellow;
 	text-decoration: underline;
 }
 .about-main-info h2{
@@ -587,14 +582,13 @@ button:focus{
 	line-height: 24px;
 }
 .about-main-info a.new-btn-d.br-2{
-	border: 2px solid #12557f;
+	border: 2px solid #fca901;
 }
 .about-main-info a.new-btn-d::before{
 	background: rgba(18,85,127,0.2);
 }
 .about-main-info a:hover{
 	color: #ffffff;
-	background:#1b5354;
 }
 .hvr-radial-out{
 	display: inline-block;
@@ -804,7 +798,7 @@ button:focus{
     border: 2px solid #12557f;
 }
 .well-block form .form-group button.new-btn-d::before {
-    background: #1b5354;
+    background: #fff;
 }
 .feature-block .feature-title{
 	font-size: 20px;
@@ -837,7 +831,7 @@ button:focus{
 }
 	.box-gallery:hover .box-content {
 		background-color: rgba(255, 242, 242, 0.8);
-		box-shadow: 5px 5px 10px #1b5354;
+		box-shadow: 5px 5px 10px #f5f112;
 	}
 .box-gallery .box-content:before,
 .box-gallery .box-content:after{
@@ -951,27 +945,34 @@ button:focus{
 .our-team .pic{
     margin: 8px;
     position: relative;
-    border: 3px solid #0b7f9c;
+    border: 2px solid #f5f112;
     transition: all 0.5s ease 0s;
 	border-radius: 13px;
 	height: 330px;
 }
-.our-team:hover .pic{
-    border-color: #12557f;
-	color: #fff;
+.our-team .pic:after {
+	content: "";
+	width: 100%;
+	height: 0;
+	color: #000;
+	background: #f5f112; /*#*/
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	opacity: 0.9;
+	transform-origin: 0 0 0;
+	transition: all 0.5s ease 0s;
+	border-radius: 11px;
+
+
 }
-	.our-team .pic:after {
-		content: "";
-		width: 100%;
-		height: 0;
-		background: #1b5354; 
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		opacity: 0.9;
-		transform-origin: 0 0 0;
-		transition: all 0.5s ease 0s;
-	}
+.our-team:hover .pic{
+    border-color: #bb8008;
+	color: #fff;
+	border-radius: 11px;
+
+}
+	
 .our-team:hover .pic:after{
     height: 100%;
     opacity: 0.85;
@@ -1005,7 +1006,7 @@ button:focus{
 }
 .post:hover {
     background: #fff;
-    color: #1b5354;
+    color: #000;
     border: 2px solid #fff;
     border-radius: 15px;
 	font-size: 10px;
@@ -1269,8 +1270,8 @@ select.form-control:not([size]):not([multiple]){
 	color: #ffffff;
 }
    .accordion {
-	background-color: #1b5354;
 	color: #fff;
+	background: #bb8008;
 	cursor: pointer;
 	padding: 18px;
 	width: 100%;
@@ -1282,7 +1283,7 @@ select.form-control:not([size]):not([multiple]){
 	font-size: 20px;
   }
   .active, .accordion:hover {
-	  background: #3da399;
+	  background: #f5f112;
 	  color: #000;
 	  transition: 0.4s;
   }
@@ -1307,15 +1308,16 @@ select.form-control:not([size]):not([multiple]){
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background: #1b5354;
   border-radius: 5px;
+  background: #f5f112;
+
 }
 p{
     color: #000;
     font-size: large;
 }
 a{
-            font-size: xx-large;
+            font-size: x-large;
          }
          .our-team .pic{
             height: auto;
