--- a/css/index.arabic.css
+++ b/css/index.arabic.css
@@ -1515,3 +1515,20 @@ select.form-control:not([size]):not([multiple]) {
             font-size: 18px;
             text-align: right;
          }
+           /*  whatsapp*/
+		.whats-app {
+			position: fixed;
+			width: 55px;
+			height: 52px;
+			bottom: 109px;
+			left: 20px;
+			background-color: #25d366;
+			color: #FFF;
+			border-radius: 50px;
+			text-align: center;
+			font-size: 30px;
+			box-shadow: 2px 2px 3px #999;
+			z-index: 100;}
+			.what{
+				color: #fff;
+			}
