--- a/css/style.css
+++ b/css/style.css
@@ -1332,8 +1332,23 @@ a{
             min-height: 480px;
          }
 
-
-
+        /*  whatsapp*/
+		.whats-app {
+			position: fixed;
+			width: 55px;
+			height: 52px;
+			bottom: 109px;
+			left: 20px;
+			background-color: #25d366;
+			color: #FFF;
+			border-radius: 50px;
+			text-align: center;
+			font-size: 30px;
+			box-shadow: 2px 2px 3px #999;
+			z-index: 100;}
+			.what{
+				color: #fff;
+			}
 
 
 
